--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,35 +9,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="de.hs_mannheim.demo.benny.rxdemo.MainActivity">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/AutoComplete"
-        android:id="@+id/lblAutoCompletion"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtAutoCompletion"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/lblAutoCompletion" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/lblSuggestion"
-        android:layout_below="@+id/txtAutoCompletion"
+        android:text="Observer Demo"
+        android:id="@+id/btnObserverDemo"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:onClick="onClickObserverDemo" />
 
-    <ListView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/lblSuggestion"
-        android:layout_alignParentStart="true" />
+        android:text="Cache Demo"
+        android:id="@+id/btnCacheDemo"
+        android:layout_below="@+id/btnObserverDemo"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:onClick="onClickCacheDemo" />
 </RelativeLayout>
