--- a/app/src/main/res/layout/activity_cache.xml
+++ b/app/src/main/res/layout/activity_cache.xml
@@ -9,4 +9,37 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="de.hs_mannheim.demo.benny.rxdemo.CacheActivity">
 
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New ToggleButton"
+        android:id="@+id/tglWithCaching"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Caching"
+        android:id="@+id/lblCache"
+        android:layout_alignBottom="@+id/tglWithCaching"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnRefresh"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:src="@android:drawable/ic_popup_sync"
+        android:onClick="onClickRefresh" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lstCachingItems"
+        android:layout_below="@+id/btnRefresh"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
